attempt to fix overflow-x

--- a/defaults.css
+++ b/defaults.css
@@ -18,6 +18,8 @@
     --size-150: 9.375rem;
 }
 
+html, body { overflow-x: hidden;}
+
 body {
     max-width: 1200px;
     font-family: "Open Sans", sans-serif;
@@ -28,7 +30,8 @@ body {
     color: var(--font-color-base);
     margin: auto;
     padding: 0;
-    overflow-x: hidden;
+    position: relative;
+    
  }
 
  *,
